--- a/package.json
+++ b/package.json
@@ -1,13 +1,14 @@
 {
   "name": "calculator",
-  "version": "1.1.3",
+  "version": "1.1.4",
   "description": "a calculator webapp",
   "author": "adrianjost <homepage@hackedit.de>",
   "private": true,
   "scripts": {
     "dev": "node build/dev-server.js",
     "start": "node build/dev-server.js",
-    "build": "node build/build.js"
+    "build": "node build/build.js",
+    "deploy": "node build/build.js && firebase deploy"
   },
   "dependencies": {
     "vue": "^2.5.2"
