--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "calculator",
-  "version": "1.1.4",
+  "version": "1.2.0",
   "description": "a calculator webapp",
-  "author": "adrianjost <homepage@hackedit.de>",
+  "author": "Adrian Jost <github@adrianjost.dev>",
   "private": true,
   "scripts": {
     "dev": "node build/dev-server.js",
@@ -11,6 +11,7 @@
     "deploy": "node build/build.js && firebase deploy"
   },
   "dependencies": {
+    "string-math": "^1.2.1",
     "vue": "^2.5.2"
   },
   "devDependencies": {
