--- a/package.json
+++ b/package.json
@@ -1,67 +1,43 @@
 {
-  "name": "calculator",
-  "version": "1.2.0",
-  "description": "a calculator webapp",
-  "author": "Adrian Jost <github@adrianjost.dev>",
-  "private": true,
-  "scripts": {
-    "dev": "node build/dev-server.js",
-    "start": "node build/dev-server.js",
-    "build": "node build/build.js",
-    "deploy": "node build/build.js && firebase deploy"
-  },
-  "dependencies": {
-    "string-math": "^1.2.1",
-    "vue": "^2.6.10"
-  },
-  "devDependencies": {
-    "autoprefixer": "^9.5.1",
-    "babel-core": "^6.26.0",
-    "babel-loader": "^8.0.5",
-    "babel-plugin-transform-runtime": "^6.23.0",
-    "babel-preset-env": "^1.7.0",
-    "babel-preset-stage-2": "^6.24.1",
-    "babel-register": "^6.26.0",
-    "chalk": "^2.4.2",
-    "connect-history-api-fallback": "^1.6.0",
-    "copy-webpack-plugin": "^5.0.3",
-    "css-loader": "^2.1.1",
-    "cssnano": "^4.1.10",
-    "eventsource-polyfill": "^0.9.6",
-    "express": "^4.16.4",
-    "extract-text-webpack-plugin": "^3.0.0",
-    "file-loader": "^3.0.1",
-    "friendly-errors-webpack-plugin": "^1.6.1",
-    "html-webpack-plugin": "^3.2.0",
-    "http-proxy-middleware": "^0.19.1",
-    "node-sass": "^4.12.0",
-    "opn": "^6.0.0",
-    "optimize-css-assets-webpack-plugin": "^5.0.1",
-    "ora": "^3.4.0",
-    "rimraf": "^2.6.3",
-    "sass-loader": "^7.1.0",
-    "semver": "^6.0.0",
-    "shelljs": "^0.8.3",
-    "style-loader": "^0.23.1",
-    "sw-precache-webpack-plugin": "^0.11.4",
-    "uglify-es": "^3.1.3",
-    "url-loader": "^1.1.2",
-    "vue-loader": "^15.7.0",
-    "vue-style-loader": "^4.1.2",
-    "vue-template-compiler": "^2.6.10",
-    "webpack": "^4.30.0",
-    "webpack-bundle-analyzer": "^3.3.2",
-    "webpack-dev-middleware": "^3.6.2",
-    "webpack-hot-middleware": "^2.24.4",
-    "webpack-merge": "^4.2.1"
-  },
-  "engines": {
-    "node": ">= 4.0.0",
-    "npm": ">= 3.0.0"
-  },
-  "browserslist": [
-    "> 1%",
-    "last 2 versions",
-    "not ie <= 8"
-  ]
+	"name": "calculator",
+	"version": "1.2.0",
+	"description": "a calculator webapp",
+	"author": "Adrian Jost <github@adrianjost.dev>",
+	"private": true,
+	"scripts": {
+		"dev": "parcel index.html --port 8080",
+		"build": "parcel build index.html",
+		"deploy": "npm run build && firebase deploy",
+		"lint:all:prettier": "prettier --loglevel log -c \"**/*.{js,json,css,scss,vue,html,md}\" --write",
+		"lint:fix:prettier": "npm run lint:all:prettier --write",
+		"lint:ci": "run-s lint:all:*",
+		"lint": "run-s lint:fix:*"
+	},
+	"dependencies": {
+		"string-math": "^1.2.1",
+		"vue": "^2.6.10",
+		"vue-hot-reload-api": "^2.3.3"
+	},
+	"devDependencies": {
+		"@vue/component-compiler-utils": "^3.0.0",
+		"autoprefixer": "^9.5.1",
+		"babel-core": "^6.26.3",
+		"babel-plugin-transform-runtime": "^6.23.0",
+		"babel-preset-env": "^1.7.0",
+		"babel-preset-stage-2": "^6.24.1",
+		"npm-run-all": "^4.1.5",
+		"parcel-bundler": "^1.12.3",
+		"prettier": "1.17.0",
+		"sass": "^1.19.0",
+		"vue-template-compiler": "^2.6.10"
+	},
+	"engines": {
+		"node": ">= 4.0.0",
+		"npm": ">= 3.0.0"
+	},
+	"browserslist": [
+		"> 1%",
+		"last 2 versions",
+		"not ie <= 8"
+	]
 }
