--- a/.mergify.yml
+++ b/.mergify.yml
@@ -3,6 +3,7 @@ pull_request_rules:
     conditions:
       - author=greenkeeper[bot]
       - status-success=Travis CI - Pull Request
+      - status-success=greenkeeper/verify
       - label!=WIP
     actions:
       merge:
