--- a/.mergify.yml
+++ b/.mergify.yml
@@ -1,19 +1,33 @@
 pull_request_rules:
-  - name: automatic merging of greenkeeper pulls
+  - name: automatic merge for Greenkeeper pull requests on master
     conditions:
       - author=greenkeeper[bot]
-      - status-success=Travis CI - Pull Request
-      - status-success=greenkeeper/verify
-      - label!=WIP
+      - label~=greenkeeper
+      - status-success~=Travis CI
+      - status-success~=WIP
+    actions:
+      merge:
+        method: squash
+        strict: true
+  - name: automatic merge for Dependabot pull requests on master
+    conditions:
+      - author=dependabot[bot]
+      - label~=dependencies
+      - status-success~=Travis CI
+      - status-success~=WIP
+    actions:
+      merge:
+        method: squash
+        strict: true
+  - name: automatic merge on CI success and review
+    conditions:
+      - label~=merge pull
+      - status-success~=Travis CI
+      - status-success~=WIP
     actions:
       merge:
         method: merge
         strict: true
-  - name: delete merged branches
-    conditions:
-      - merged
-    actions:
-      delete_head_branch: {}
   - name: add WIP label when WIP is in title
     conditions:
       - title~=WIP
@@ -23,3 +37,8 @@ pull_request_rules:
       label:
         add:
           - WIP
+  - name: delete merged branch
+    conditions:
+      - merged
+    actions:
+      delete_head_branch: {}
