--- a/.travis.yml
+++ b/.travis.yml
@@ -2,14 +2,8 @@ language: node_js
 node_js:
   - lts/*
 script:
-  - npm run lint:ci
   - npm run build
-  - export BRANCH=$(if [ "$TRAVIS_PULL_REQUEST" == "false" ]; then echo $TRAVIS_BRANCH; else echo $TRAVIS_PULL_REQUEST_BRANCH; fi)
-notifications:
-  email: false
-cache:
-  directories:
-    - node_modules
+cache: npm
 deploy:
   skip_cleanup: true
   provider: firebase
