--- a/package.json
+++ b/package.json
@@ -27,6 +27,8 @@
 		"babel-preset-stage-2": "^6.24.1",
 		"npm-run-all": "^4.1.5",
 		"parcel-bundler": "^1.12.3",
+		"parcel-plugin-sw-cache": "^0.3.1",
+		"parcel-plugin-web-extension": "^1.6.1",
 		"prettier": "1.19.1",
 		"sass": "^1.26.5",
 		"vue-template-compiler": "^2.6.11"
@@ -39,5 +41,11 @@
 		"> 1%",
 		"last 2 versions",
 		"not ie <= 8"
-	]
+	],
+	"cache": {
+    "disablePlugin": false,
+    "inDev": true,
+    "strategy": "default",
+    "clearDist": true
+  }
 }
