--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,12 +1,13 @@
 name: CI
-"on": push
+"on": 
+  push:
+    branches:
+      - main
 jobs:
   deploy:
     name: Deploy
     runs-on: ubuntu-latest
     if: github.ref == 'refs/heads/master'
-    needs:
-      - lint
     steps:
       - uses: actions/checkout@v2
       - uses: actions/cache@v2
