--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -10,7 +10,7 @@ jobs:
     steps:
       - uses: actions/checkout@v2
       - uses: chrnorm/deployment-status@v1.0.0
-        id: deployment
+        id: deployment_id
         name: Create GitHub deployment
         with:
           token: ${{ secrets.GITHUB_TOKEN }}
